--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SigninActivity">
+            android:name=".SigninActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignupActivity"></activity>
+            android:name=".SignupActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"/>
         <activity android:name=".MainActivity">
 
         </activity>
