register store layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".RegisterStoreActivity"></activity>
+        <activity android:name=".StoreActivity" />
         <activity
             android:name=".SigninActivity"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SignupActivity"
-            android:windowSoftInputMode="stateHidden|adjustResize"/>
-        <activity android:name=".MainActivity">
-
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
