--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,41 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BookingActivity">
-
-        </activity>
-        <activity android:name=".StoreProfileActivity" />
-        <activity android:name=".RegisterStoreActivity" />
-        <activity android:name=".StoreActivity" />
         <activity
+            android:name=".SignupActivity"
+            android:screenOrientation="userPortrait"
+            android:configChanges="orientation"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity
+            android:screenOrientation="userPortrait"
+            android:configChanges="orientation"
+            android:name=".MainActivity"/>
+        <activity
+            android:screenOrientation="userPortrait"
+            android:configChanges="orientation"
+            android:name=".BookingActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"/>
+        <activity
+            android:screenOrientation="userPortrait"
+            android:configChanges="orientation"
+            android:name=".StoreProfileActivity" />
+        <activity
+            android:screenOrientation="userPortrait"
+            android:configChanges="orientation"
+            android:name=".RegisterStoreActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"/>
+        <activity
+            android:screenOrientation="userPortrait"
+            android:configChanges="orientation"
+            android:name=".StoreActivity" />
+        <activity
+            android:screenOrientation="userPortrait"
+            android:configChanges="orientation"
             android:name=".SigninActivity"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
@@ -30,10 +53,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SignupActivity"
-            android:windowSoftInputMode="stateHidden|adjustResize" />
-        <activity android:name=".MainActivity" />
     </application>
 
 
